--- a/05 打包图片资源/src/index.html
+++ b/05 打包图片资源/src/index.html
@@ -9,5 +9,9 @@
   <div id="title">
     hello
   </div>
+  <div id="box1"></div>
+  <div id="box2"></div>
+  <div id="box3"></div>
+  <img src="./img/react.png" alt="">
 </body>
 </html>
